blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-blue
  labels:
    app: myapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
      version: blue
  template:
    metadata:
      labels:
        app: myapp
        version: blue
    spec:
      containers:
      - name: myapp
        image: gcr.io/my-personal-1/hello:blueV2
        ports:
        - containerPort: 3434
