titanic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic
  labels:
    app: titanic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titanic
  template:
    metadata:
      labels:
        app: titanic
    spec:
      containers:
        - image: gcr.io/my-personal-1/titanic:latest
          name: titanic
          ports:
            - containerPort: 3000
              name: titanic
