ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-blue-service
spec:
  selector:
    app: myapp
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3434
---
apiVersion: v1
kind: Service
metadata:
  name: hello-green-service
spec:
  selector:
    app: myapp
    version: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3434
