titanic-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: titanic
  name: titanic
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: titanic
